[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scence/NewGame/Boundary/Game31.gd" type="Script" id=1]
[ext_resource path="res://fonts/MenuButton.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/DMMono-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/images.jpeg" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0.501961, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_color = Color( 0.501961, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 311.985
margin_top = 185.539
margin_right = 919.985
margin_bottom = 532.539
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_accel = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameover" type="Label" parent="PopupMenu"]
margin_left = 145.413
margin_top = 31.809
margin_right = 415.413
margin_bottom = 97.809
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nickname" type="TextEdit" parent="PopupMenu"]
margin_left = 221.188
margin_top = 180.542
margin_right = 392.188
margin_bottom = 220.542
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lnickname" type="Label" parent="PopupMenu"]
margin_left = 106.037
margin_top = 188.952
margin_right = 183.037
margin_bottom = 219.952
text = "Nick Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lscore" type="Label" parent="PopupMenu"]
margin_left = 74.0
margin_top = 109.0
margin_right = 118.0
margin_bottom = 125.0
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lscore2" type="Label" parent="PopupMenu"]
margin_left = 137.0
margin_top = 107.0
margin_right = 181.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savenickname" type="Button" parent="PopupMenu"]
margin_left = 424.45
margin_top = 179.683
margin_right = 507.45
margin_bottom = 218.683
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupMenu/savenickname"]
margin_left = 6.10352e-05
margin_top = 3.68314
margin_right = 81.0001
margin_bottom = 39.6831
text = "Save"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="PopupMenu"]
margin_left = 76.3168
margin_top = 144.644
margin_right = 390.317
margin_bottom = 158.644
text = "You can save your nick name with score. (Option)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="PopupMenu"]
margin_left = 76.3168
margin_top = 226.638
margin_right = 390.317
margin_bottom = 240.638
text = "What do you want? :))"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playagain" type="Button" parent="PopupMenu"]
margin_left = 104.0
margin_top = 259.0
margin_right = 263.0
margin_bottom = 303.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupMenu/playagain"]
margin_left = 2.0
margin_right = 162.0
margin_bottom = 45.0
text = "Play again"
align = 1
valign = 1

[node name="quit" type="Button" parent="PopupMenu"]
margin_left = 367.892
margin_top = 261.676
margin_right = 508.892
margin_bottom = 303.676

[node name="Label" type="Label" parent="PopupMenu/quit"]
margin_top = -1.0
margin_right = 140.0
margin_bottom = 40.0
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.667203, 0.665998 )
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1156.9
margin_top = 41.321
margin_right = 1240.9
margin_bottom = 74.321
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0784314, 0.0823529, 0.392157, 1 )
custom_colors/font_outline_modulate = Color( 0.0784314, 0.0823529, 0.392157, 1 )
custom_colors/font_color_shadow = Color( 0.0784314, 0.0823529, 0.392157, 1 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 1156.81
margin_top = 190.686
margin_right = 1241.81
margin_bottom = 221.686
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0784314, 0.0823529, 0.392157, 1 )
custom_colors/font_outline_modulate = Color( 0.0784314, 0.0823529, 0.392157, 1 )
custom_colors/font_color_shadow = Color( 0.0784314, 0.0823529, 0.392157, 1 )
text = "No.Act:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="showscore" type="Label" parent="."]
margin_left = 1158.16
margin_top = 87.6752
margin_right = 1240.16
margin_bottom = 124.675
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.501961, 0.0784314, 0.0784314, 1 )
custom_colors/font_outline_modulate = Color( 0.501961, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.501961, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="noaction" type="Label" parent="."]
margin_left = 1160.05
margin_top = 255.706
margin_right = 1239.05
margin_bottom = 297.706
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.501961, 0.0784314, 0.0784314, 1 )
custom_colors/font_outline_modulate = Color( 0.501961, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.501961, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PopupMenu/savenickname" to="." method="_on_savenickname_pressed"]
[connection signal="pressed" from="PopupMenu/playagain" to="." method="_on_playagain_pressed"]
[connection signal="pressed" from="PopupMenu/quit" to="." method="_on_quit_pressed"]
